--- a/popup.html
+++ b/popup.html
@@ -1,77 +1,192 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>VanNav插件</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
+    />
+  </head>
 
-<head>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-</head>
+  <body>
+    <main class="container">
+      <!-- 主页面 -->
+      <div class="page show" id="mainPage">
+        <header style="text-align: center; position: relative">
+          <svg
+            id="openExtension"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+            aria-label="打开插件"
+          >
+            <title>独立打开</title>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m6.75 12-3-3m0 0-3 3m3-3v6m-1.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
+            />
+          </svg>
 
-<body>
-  <main class="container">
-    <div class="page show" id="mainPage">
-      <svg id="openExtension" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>export-variant</title><path d="M12,1L8,5H11V14H13V5H16M18,23H6C4.89,23 4,22.1 4,21V9A2,2 0 0,1 6,7H9V9H6V21H18V9H15V7H18A2,2 0 0,1 20,9V21A2,2 0 0,1 18,23Z" /></svg>
-      <button id="addTool">添加工具</button>
-      <button id="openAdmin">后台管理</button>
-      <button id="openWebsite">前台页面</button>
-      <button id="openSetting">拓展设置</button>
-    </div>
-    <div class="page" id="confirmPage">
-      <!-- <p>确定添加工具吗？</p> -->
-      <div class="formBody">
-        <label for="name">名称
-          <input type="text" id="name" name="name" placeholder="请输入名称" required>
-        </label>
-        <label for="catelog">分类
-          <select id="catelog" name="catelog" placeholder="请选择分类" required>
-          </select>
-        </label>
-        <label for="url">网址
-          <input type="text" id="url" name="url" placeholder="请输入网址" required>
-        </label>
-        <label for="logo">图标
-          <input type="text" id="logo" name="logo" placeholder="请输入图标">
-        </label>
-        <label for="desc">描述
-          <input type="text" id="desc" name="desc" placeholder="请输入描述" required>
-        </label>
-        <label for="hide1">Hide&nbsp;&nbsp;
-          <input type="radio" id="hide1" name="hide" value="true">隐藏 &nbsp;
-          <input type="radio" id="hide2" name="hide" value="false" checked>不隐藏
-        </label>
+          <svg
+            id="openGithub"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            aria-label="GitHub仓库"
+          >
+            <title>GitHub</title>
+            <path
+              d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
+            />
+          </svg>
+          <h5 style="margin-top: -20px">VanNav插件</h5>
+        </header>
+
+        <div class="button-group">
+          <button id="addTool" class="primary">添加工具</button>
+          <button id="openAdmin" class="secondary">后台管理</button>
+          <button id="openWebsite" class="secondary">前台页面</button>
+          <button id="openSetting" class="secondary">插件设置</button>
+        </div>
+
+        <div id="status" class="status-message"></div>
       </div>
 
-      <div class="flex">
-        <button id="confirmAdd">确定</button>
-        <button id="cancelAdd">返回</button>
-      </div>
-    </div>
-    <div class="page" id="loadingPage">
-      <div class="loadingWraper">
-        <div>
-          <div class="lds-dual-ring"></div>
+      <!-- 添加工具页面 -->
+      <div class="page" id="confirmPage">
+        <header>
+          <h3>添加工具</h3>
+        </header>
+
+        <form id="addToolForm" class="formBody">
+          <label for="name">
+            名称
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="请输入名称"
+              required
+            />
+          </label>
+
+          <label for="catelog">
+            分类
+            <select id="catelog" name="catelog" required>
+              <option value="">请选择分类</option>
+            </select>
+          </label>
+
+          <label for="url">
+            网址
+            <input
+              type="url"
+              id="url"
+              name="url"
+              placeholder="请输入网址"
+              required
+            />
+          </label>
+
+          <label for="logo">
+            图标
+            <input
+              type="url"
+              id="logo"
+              name="logo"
+              placeholder="请输入图标URL"
+            />
+          </label>
+
+          <label for="desc">
+            描述
+            <input
+              type="text"
+              id="desc"
+              name="desc"
+              placeholder="请输入描述"
+              required
+            />
+          </label>
+
+          <fieldset>
+            <legend>显示设置</legend>
+            <label for="hide1">
+              <input type="radio" id="hide1" name="hide" value="true" />
+              隐藏
+            </label>
+            <label for="hide2">
+              <input
+                type="radio"
+                id="hide2"
+                name="hide"
+                value="false"
+                checked
+              />
+              不隐藏
+            </label>
+          </fieldset>
+        </form>
+
+        <div class="button-group">
+          <button id="confirmAdd" class="primary">确定添加</button>
+          <button id="cancelAdd" class="secondary">返回</button>
         </div>
       </div>
-    </div>
-    <div class="page" id="settingPage">
-      <div>
-        <label for="baseUrl">baseUrl
-          <input type="text" id="baseUrl" name="baseUrl" placeholder="请输入 baseUrl" required>
-        </label>
-        <label for="token">token
-          <input type="text" id="token" name="token" placeholder="请输入 token" required>
-        </label>
-      </div>
-      <div class="flex">
-        <button id="confirmSetting">确定</button>
-        <button id="cancelSetting">返回</button>
-      </div>
-      <button id="fetchCatelog">重新获取分类</button>
-    </div>
 
-  </main>
-  <script src="action.js"></script>
-</body>
+      <!-- 加载页面 -->
+      <div class="page" id="loadingPage">
+        <div class="loading-wrapper">
+          <div class="loading-spinner"></div>
+          <p>处理中...</p>
+        </div>
+      </div>
 
+      <!-- 设置页面 -->
+      <div class="page" id="settingPage">
+        <header>
+          <h3>插件设置</h3>
+        </header>
+
+        <form id="settingForm">
+          <label for="baseUrl">
+            基础URL
+            <input
+              type="url"
+              id="baseUrl"
+              name="baseUrl"
+              placeholder="请输入基础URL"
+              required
+            />
+          </label>
+
+          <label for="token">
+            认证Token
+            <input
+              type="password"
+              id="token"
+              name="token"
+              placeholder="请输入认证Token"
+              required
+            />
+          </label>
+        </form>
+
+        <div class="button-group">
+          <button id="confirmSetting" class="primary">保存设置</button>
+          <button id="cancelSetting" class="secondary">返回</button>
+        </div>
+
+        <button id="fetchCatelog" class="secondary">重新获取分类</button>
+      </div>
+    </main>
+
+    <script src="action.js"></script>
+  </body>
 </html>
